--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 html {
     font-size: 16px;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
 }
