--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,21 @@ html {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
+
+}
+
+/* Scroll bar styling */
+::-webkit-scrollbar {
+    width: 10px;
+    transition: all .1s;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background-color: var(--secondary-color);
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accent-color);
 }
