--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-
+    background-color: var(--background-color);
 }
 
 /* Scroll bar styling */
@@ -20,5 +20,20 @@ html {
     background-color: var(--secondary-color);
 }
 ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accent-color);
+}
+
+.primary-button {
+    background-color: var(--primary-color);
+    color: var(--font-color);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    transition: all .1s;
+}
+
+.primary-button:hover {
     background-color: var(--accent-color);
 }
