--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,10 @@ html {
 .primary-button:hover {
     background-color: var(--accent-color);
 }
+
+/* Hide numbers in input number fields */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
