--- a/src/routes/homePage/HomePage.module.css
+++ b/src/routes/homePage/HomePage.module.css
@@ -8,6 +8,10 @@
 
 .buttonsContainer {
     display: flex;
+    justify-content: space-between;
+    height: 6rem;
+    width: 80%;
+    margin-top: 2rem;
 }
 
 .squareButton {
