--- a/src/routes/homePage/HomePage.module.css
+++ b/src/routes/homePage/HomePage.module.css
@@ -18,4 +18,13 @@
     padding: 3rem 2rem;
     margin: 1.5rem;
     font-weight: 600;
+    /* center text */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonsContainer a {
+    text-decoration: none;
+    color: var(--text-color);
 }
