--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-    background-color: var(--background-color);
+    background-color: var(--html-color);
 }
 
 /* Scroll bar styling */
