--- a/src/variables.css
+++ b/src/variables.css
@@ -1,6 +1,7 @@
 :root {
     --font-color: #050316;
     --background-color: #fbfbfe;
+    --html-color: #f1f1f1;
     --primary-color: #2fca82;
     --secondary-color: #a7ffd6;
     --accent-color: #ff8000;
