--- a/src/components/exerciseCompleter/exerciseCompleterRow/ExerciseCompleterRow.module.css
+++ b/src/components/exerciseCompleter/exerciseCompleterRow/ExerciseCompleterRow.module.css
@@ -1,9 +1,6 @@
 .row {
     display: flex;
-    padding: 10px;
-    background-color: var(--background-color);
-    border-radius: 5px;
-    margin-bottom: 10px;
+    background-color: transparent;
     align-items: center;
 }
 
