--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ html {
     background-color: var(--html-color);
 }
 
+body {
+    padding-top: 70px;
+}
+
 /* Scroll bar styling */
 ::-webkit-scrollbar {
     width: 10px;
