feat: Update RecentWorkoutPresenter to handle click events
This commit adds a click event handler to the RecentWorkoutPresenter component, allowing users to click on a recent workout and navigate to the corresponding workout template. The handleRecentWorkoutClick function redirects the user to the /startWorkout/template/{templateId} route when a recent workout is clicked. This enhancement improves the user experience by providing a convenient way to start a workout from the recent workout list.

--- a/src/components/registerForm/RegisterForm.module.css
+++ b/src/components/registerForm/RegisterForm.module.css
@@ -25,6 +25,8 @@ input {
     margin-top: 5px;
     width: 90%;
     transition: all .1s;
+    min-width: 20rem;
+    text-align: left;
 }
 
 input:focus {
