--- a/src/components/loginForm/LoginForm.module.css
+++ b/src/components/loginForm/LoginForm.module.css
@@ -11,10 +11,17 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.labelAndInput {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
 label {
     margin-bottom: 0.5rem;
     font-weight: bold;
     color: var(--text-color);
+    margin-left: 1rem;
 }
 
 input {
