--- a/src/components/exercisePresenter/ExercisePresenter.module.css
+++ b/src/components/exercisePresenter/ExercisePresenter.module.css
@@ -6,13 +6,17 @@
     align-content: flex-start;
     background-color: var(--primary-color);
     border-radius: .8rem;
-    border: var(--font-color) solid .15rem;
+    border: var(--font-color-contrast) solid .15rem;
     padding: .5rem 1rem;
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: all .1s;
     width: 90%;
     max-width: 500px;
+}
+
+.exercisePresenter * {
+    color: var(--font-color-contrast);
 }
 
 .exercisePresenter:hover {
