--- a/src/routes/createTemplate/CreateTemplatePage.module.css
+++ b/src/routes/createTemplate/CreateTemplatePage.module.css
@@ -1,10 +1,10 @@
 .createTemplatePageContainer {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
-  height: 100%;
-  width: 90%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    height: 100%;
+    width: 90%;
 }
 
 .templateInfoContainer {
@@ -21,16 +21,17 @@
 
 
 .inputContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .inputContainer label {
     margin-left: .6rem;
 }
 
-.inputContainer input, textarea {
+.inputContainer input,
+textarea {
     min-height: 2rem;
     min-width: 15rem;
 }
@@ -50,6 +51,7 @@
     overflow: hidden;
     margin-top: 3rem;
     justify-content: space-around;
+    color: var(--font-color-contrast);
 }
 
 .createTemplateOption {
@@ -59,7 +61,8 @@
     text-align: center;
     background-color: var(--primary-color);
     color: var(--text-color);
-    transition: background-color 0.2s ease; /* Add transition for smooth color change */
+    transition: background-color 0.2s ease;
+    /* Add transition for smooth color change */
     cursor: pointer;
 }
 
@@ -67,7 +70,8 @@
 .createTemplateOption:first-child::after {
     content: "";
     display: block;
-    height: 85%; /* Adjust as needed */
+    height: 85%;
+    /* Adjust as needed */
     width: 1px;
     background-color: var(--secondary-color);
     position: absolute;
@@ -77,7 +81,8 @@
 }
 
 .createTemplateOption:hover {
-    background-color: var(--accent-color); /* Change background color on hover */
+    background-color: var(--accent-color);
+    /* Change background color on hover */
 }
 
 .createTemplateOption:first-child {
@@ -91,5 +96,5 @@
 .createTemplateOption:active {
     /* Change background color for one that you consider suitable. Feel free in your decision. use a HEX variation of --accent-color */
     background-color: #ff0000;
-    
+
 }
