--- a/src/components/registerForm/RegisterForm.module.css
+++ b/src/components/registerForm/RegisterForm.module.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     width: 100%;
     margin-bottom: 1rem;
+    font-size: var(--body-font-size);
 }
 
 input {
@@ -48,6 +49,7 @@ button {
     padding: 10px 20px;
     cursor: pointer;
     transition: all .1s;
+    font-size: var(--body-font-size);
 }
 
 button:hover {
