--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
     font-size: 16px;
+    /* Represents the size of the body text */
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
