--- a/src/variables.css
+++ b/src/variables.css
@@ -1,4 +1,5 @@
 :root {
+    /* Colors */
     --font-color: #050316;
     --background-color: #fbfbfe;
     --html-color: #f1f1f1;
@@ -15,4 +16,10 @@
     --secondary-color: var(--brand-letters-medium);
     --accent-color: var(--brand-icon-light);
     --font-color-contrast: #e6e6e6;
+
+    /* Font sizes */
+    --body-font-size: 1rem;
+    --heading-font-size: 1.3rem;
+    --subheading-font-size: 1.15rem;
+    --input-field-font-size: var(--body-font-size--body-font-size);
 }
