--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ textarea {
     border: 1px solid var(--primary-color);
     border-radius: 5px;
     padding: 10px;
-    font-size: 1em;
+    font-size: var(--input-font-size);
     margin: 10px;
     width: 90%;
     transition: all .1s;
