--- a/src/routes/createTemplate/CreateTemplatePage.module.css
+++ b/src/routes/createTemplate/CreateTemplatePage.module.css
@@ -98,3 +98,9 @@ textarea {
     background-color: #ff0000;
 
 }
+
+.createTemplateOption:disabled {
+    /* Change background color for one that you consider suitable. Feel free in your decision. use a HEX variation of --accent-color */
+    background-color: #555555;
+    cursor: not-allowed;
+}
