--- a/src/components/exercisePresenter/ExercisePresenter.module.css
+++ b/src/components/exercisePresenter/ExercisePresenter.module.css
@@ -12,7 +12,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: all .1s;
     width: 90%;
-    max-width: 500px;
+    /* max-width: 500px; */
 }
 
 .exercisePresenter * {
