--- a/src/routes/createTemplate/CreateTemplatePage.module.css
+++ b/src/routes/createTemplate/CreateTemplatePage.module.css
@@ -1,16 +1,23 @@
 .createTemplatePageContainer {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
-    height: 100%;
     width: 90%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    /* TODO borrar */
+    border: 1px solid red;
 }
 
 .templateInfoContainer {
     display: flex;
     align-items: start;
-    justify-content: space-around;
     width: 100%;
 }
 
@@ -19,11 +26,11 @@
     margin-right: 5rem;
 }
 
-
 .inputContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 50%;
 }
 
 .inputContainer label {
@@ -41,6 +48,10 @@ textarea {
     align-items: flex-start;
     justify-content: space-around;
     width: 100%;
+}
+
+.exerciseList {
+    width: 45%;
 }
 
 .createTemplateOptions {
@@ -66,19 +77,6 @@ textarea {
     cursor: pointer;
 }
 
-/* Separation line between buttons */
-.createTemplateOption:first-child::after {
-    content: "";
-    display: block;
-    height: 85%;
-    /* Adjust as needed */
-    width: 1px;
-    background-color: var(--secondary-color);
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-}
 
 .createTemplateOption:hover {
     background-color: var(--accent-color);
