--- a/src/routes/selectTemplate/SelectTemplatePage.module.css
+++ b/src/routes/selectTemplate/SelectTemplatePage.module.css
@@ -16,3 +16,16 @@
 span {
     margin-left: .8rem;
 }
+
+.listContainer {
+    display: flex;
+    align-items: start;
+    width: 100%;
+}
+
+
+.individualListContainer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
