--- a/src/components/genericList/GenericList.module.css
+++ b/src/components/genericList/GenericList.module.css
@@ -7,8 +7,7 @@
     border-radius: 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 1rem;
-    width: 90%;
-    max-width: 700px;
+    /* max-width: 700px; */
 
     /* Scroll bar */
     overflow-y: auto;
@@ -25,6 +24,6 @@
 }
 
 .list > * {
-    width: 90%;
+    /* width: 90%; */
     margin: .5rem 0;
 }
