Redirect between pages when no templates nor exercises have already been created by the user.

--- a/src/variables.css
+++ b/src/variables.css
@@ -21,5 +21,5 @@
     --body-font-size: 1rem;
     --heading-font-size: 1.3rem;
     --subheading-font-size: 1.15rem;
-    --input-field-font-size: var(--body-font-size--body-font-size);
+    --input-field-font-size: var(--body-font-size);
 }
