--- a/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
+++ b/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
@@ -1,14 +1,49 @@
-/* These styles are shared with ExerciseSetPresenter */
-.exerciseTemplatePresenter {
+.container {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
     background-color: var(--primary-color);
     border-radius: .8rem;
     border: var(--font-color-contrast) solid .15rem;
-    padding: .5rem 1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: clamp(23rem, 23rem, 23rem);
     transition: all .1s;
-    width: clamp(17rem, 17rem, 17rem);
+}
+
+.container:hover {
+    border: var(--accent-color) solid .15rem;
+}
+
+.container:hover .name {
+    color: var(--accent-color);
+}
+
+.deleteContainer {
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background-color);
+    border-top-right-radius: .65rem;
+    border-bottom-right-radius: .65rem;
+    cursor: pointer;
+    padding: 0 1rem;
+    padding-top: .2rem;
+    font-weight: 600;
+}
+
+.deleteContainer:hover {
+    color: var(--font-color-contrast);
+    background-color: var(--accent-color);
+    /* Prevent text selection */
+    user-select: none;
+}
+
+/* These styles are shared with ExerciseSetPresenter */
+.exerciseTemplatePresenter {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+    transition: all .1s;
 }
 
 .exerciseTemplatePresenter * {
