--- a/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
+++ b/src/components/exerciseTemplatePresenter/ExerciseTemplatePresenter.module.css
@@ -7,6 +7,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: clamp(23rem, 23rem, 23rem);
     transition: all .1s;
+    user-select: none;
+    cursor: pointer;
 }
 
 .container:hover {
