Keep same delete button size when disabled and enabled

--- a/src/components/exercisePresenter/ExercisePresenter.module.css
+++ b/src/components/exercisePresenter/ExercisePresenter.module.css
@@ -57,8 +57,8 @@
     justify-content: center;
     font-size: var(--heading-font-size);
     font-weight: 500;
-    transition: all .1s;
-    padding: 0 1.4rem;
+    /* Apply transition to all properties except width and height */
+    transition: color .1s, background-color .1s, transform .1s, opacity .1s;
     color: var(--font-color);
 
     /* Adjust radius to match border */
@@ -69,6 +69,7 @@
 .deleteContainerEnabled {
     cursor: pointer;
     background-color: var(--background-color);
+    padding: 0 1.4rem;
 }
 
 .deleteContainerEnabled:hover {
@@ -81,4 +82,5 @@
 .deleteContainerDisabled {
     cursor: not-allowed;
     background-color: var(--disabled-color);
+    padding: 0 0.97rem;
 }
