--- a/src/routes/createExercise/CreateExercisePage.module.css
+++ b/src/routes/createExercise/CreateExercisePage.module.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   /* align-items: center; */
   justify-content: space-between;
-  height: 100%;
+  /* height: 100%; */
+  /* Set the height of the page to a percentage viewport height */
+  height: 70vh;
   width: 90%;
 }
 
@@ -55,24 +57,28 @@ label {
 
 .buttonContainer {
   display: flex;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
-  min-height: 100%;
+  height: 65%;
   min-width: 8%;
-  margin-top: .3rem;
 }
 
 .createExerciseButton {
-  min-width: 90%;
-  max-width: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
   border-radius: 5px;
   transition: all .1s;
-  margin: 0;
-  padding: 1rem;
+  margin: 0 0;
+  /* padding: 1rem; */
 }
 
 .createExerciseButton:disabled {
-  background-color: #555555;
+  background-color: var(--disabled-color);
   cursor: not-allowed;
 }
 
