--- a/src/routes/landingPage/LandingPage.module.css
+++ b/src/routes/landingPage/LandingPage.module.css
@@ -1,29 +1,8 @@
-.homePageContainer {
-    display: flex;
+.mainContainer {
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--background-color);
-}
-
-.buttonsContainer {
-    display: flex;
-    justify-content: space-between;
-    height: 6rem;
-    width: 80%;
-    margin-top: 2rem;
-}
-
-.squareButton {
-    padding: 3rem 2rem;
-    margin: 1.5rem;
-    font-weight: 600;
-    /* center text */
-    display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.buttonsContainer a {
-    text-decoration: none;
+    width: 90lh; */
+    padding-top: 1rem;
 }
