Refactor register form submit button to disable when user is loading

--- a/src/components/registerForm/RegisterForm.module.css
+++ b/src/components/registerForm/RegisterForm.module.css
@@ -55,3 +55,8 @@ button {
 button:hover {
     background-color: var(--accent-color);
 }
+
+button:disabled {
+    background-color: var(--disabled-color);
+    cursor: not-allowed;
+}
