--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ html {
     font-size: 16px;
     font-weight: 300;
     font-style: normal;
-    background-color: var(--html-color);
 }
 
 html * {
@@ -12,6 +11,12 @@ html * {
 
 body {
     padding-top: 70px;
+    background-color: var(--html-color);
+}
+
+p {
+    font-size: var(--body-font-size);
+    color: var(--font-color);
 }
 
 /* Scroll bar styling */
@@ -57,6 +62,13 @@ body {
     margin-bottom: 2rem;
 }
 
+.subheading {
+    font-size: var(--subheading-font-size);
+    /* font-weight: 600; */
+    color: var(--font-color);
+    margin-bottom: 1rem;
+}
+
 /* Hide numbers in input number fields */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -77,8 +89,6 @@ textarea {
     border-radius: 5px;
     padding: 10px;
     font-size: var(--input-font-size);
-    margin: 10px;
-    width: 90%;
     transition: all .1s;
 }
 
@@ -133,6 +143,7 @@ option:hover {
 button {
     background-color: var(--primary-color);
     color: var(--font-color-contrast);
+    font-weight: bold;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
